# crud_api_mongodb

./: Cargo.toml
src/: db.rs  error.rs  handler.rs  main.rs  model.rs  response.rs  schema.rs
