[package]
name = "mongo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.26"
mongodb = "2.3.1"
pretty_env_logger = "0.4.0"
serde = "1.0.152"
thiserror = "1.0.38"
tokio = "1.25.0"
warp = "0.3.3"
